Minor edits for Java 1.11, including updated README file.